lubuntu-default-settings (0.16) UNRELEASED; urgency=low

  * usr/bin
   - Sync XDG_DATA_DIRS with lxde-common

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 05 Dec 2010 18:56:49 +0100

lubuntu-default-settings (0.15) natty; urgency=low

  * usr/bin/startlubuntu*
   - Remove export XLIB_SKIP_ARGB_VISUALS=1, not needed since rgba support was
     removed from gtk (LP: #673704).
  * etc/xdg/lubuntu/applications/default.list:
   - Set file-roller to open archives instead of xarchiver.
   - Set audacious to open music files instead of aqualung.
  * etc/xdg/lxsession/Lubuntu*/desktop.conf
   - Switch to Ubuntu 11 font.
  * debian/control:
   - Depends on ttf-ubuntu-font-family.

 -- Julien Lavergne <gilir@ubuntu.com>  Fri, 03 Dec 2010 00:01:34 +0100

lubuntu-default-settings (0.14) natty; urgency=low

  * etc/xdg/lubuntu/lxdm/lxdm.conf
   - Enable user list in lxdm 0.3.0.
  * etc/xdg/lubuntu/applications/default.list
   - Replace epdfview by evince. LP: #657335

 -- Julien Lavergne <gilir@ubuntu.com>  Tue, 09 Nov 2010 22:53:38 +0100

lubuntu-default-settings (0.13) maverick; urgency=low
 
  * debian/postinst:
   - Don't fail if the alternative file doesn't exist. (LP: #654211)
 
 -- Julien Lavergne <gilir@ubuntu.com>  Mon, 04 Oct 2010 23:16:56 +0200

lubuntu-default-settings (0.12) maverick; urgency=low

  * debian/postinst:
   - Remove alternatives file if it's not a symlink (LP: #625485).
  * debian/prerm:
   - Don't remove alternative on upgrade.

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 03 Oct 2010 16:02:19 +0200

lubuntu-default-settings (0.11) maverick; urgency=low

  * usr/share/lubuntu/openbox/rc.xml:
   - Use lxtask instead of xfce4-taskmanager (LP: #621317)
  * etc/xdg/lxsession/Lubuntu*/desktop.conf
   - Switch to lubuntu icon them.
  * debian/control:
   - Depends on lubuntu-icon-theme.

 -- Julien Lavergne <gilir@ubuntu.com>  Wed, 29 Sep 2010 00:33:56 +0200

lubuntu-default-settings (0.10) maverick; urgency=low

  * etc/xdg/lxsession/Lubuntu*/desktop.conf